Working on resizing issues

--- a/public/test.html
+++ b/public/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div>
+            <br><br>
             <h1>Grade Calculator</h1>
             <div2>
                 <h2>Activities</h2>
@@ -30,19 +31,19 @@
                             <form>
                                 <weight>
                                     <input type="text"
-                                           name="test2" />
+                                           name="w1" />
                                 </weight>
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test3" />
-                            </form>
-                            /
+                                       name="num1" />
+                            </form>/
+                            
                             <form>
                                 <input type="text"
-                                       name="test4" />
+                                       name="den1" />
                             </form>
                         </th>
                         <th>     </th>
@@ -53,18 +54,18 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test5" />
+                                       name="w2" />
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test6" />
+                                       name="num2" />
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="test7" />
+                                       name="den2" />
                             </form>
                         </th>
                         <th>     </th>
@@ -75,18 +76,18 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test8" />
+                                       name="w3" />
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test9" />
+                                       name="num3" />
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="test10" />
+                                       name="den3" />
                             </form>
                         </th>
                         <th>     </th>
@@ -97,18 +98,18 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test11" />
+                                       name="w4" />
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="test12" />
+                                       name="num4" />
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="test13" />
+                                       name="den4" />
                             </form>
                         </th>
                         <th>     </th>
@@ -118,7 +119,7 @@
                 <h2>Result</h2>
                 <meanbutton>
                     <form class="" action="" method="post">
-                        <button id="B1" type="button" name="button">Button1</button>
+                        <button id="B1" type="button" name="button">WEIGHTED</button>
                     </form>
                 </meanbutton>
 
