started working on JS/coding calculator

--- a/public/test.html
+++ b/public/test.html
@@ -14,7 +14,7 @@
                 <h2>Activities</h2>
 
                 <p>Give grades to the numeric activities.</p>
-
+                <br>
                 <table>
                     <tr>
 
@@ -31,19 +31,22 @@
                             <form>
                                 <weight>
                                     <input type="text"
-                                           name="w1" />
+                                           name="w1"
+                                           id="w1"/>
                                 </weight>
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="num1" />
+                                       name="num1"
+                                       id="n1"/>
                             </form>/
-                            
+
                             <form>
                                 <input type="text"
-                                       name="den1" />
+                                       name="den1"
+                                       id="d1"/>
                             </form>
                         </th>
                         <th>     </th>
@@ -54,18 +57,21 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="w2" />
+                                       name="w2"
+                                       id="w2"/>
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="num2" />
+                                       name="num2"
+                                       id="n2"/>
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="den2" />
+                                       name="den2"
+                                       id="d2"/>
                             </form>
                         </th>
                         <th>     </th>
@@ -76,18 +82,21 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="w3" />
+                                       name="w3"
+                                       id="w3"/>
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="num3" />
+                                       name="num3"
+                                       id="n3"/>
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="den3" />
+                                       name="den3"
+                                       id="d3"/>
                             </form>
                         </th>
                         <th>     </th>
@@ -98,18 +107,21 @@
                         <th>
                             <form>
                                 <input type="text"
-                                       name="w4" />
+                                       name="w4"
+                                       id="w4"/>
                             </form>
                         </th>
                         <th>
                             <form>
                                 <input type="text"
-                                       name="num4" />
+                                       name="num4"
+                                       id="n4"/>
                             </form>
                             /
                             <form>
                                 <input type="text"
-                                       name="den4" />
+                                       name="den4"
+                                       id="d4"/>
                             </form>
                         </th>
                         <th>     </th>
@@ -117,11 +129,21 @@
                 </table>
 
                 <h2>Result</h2>
+                <resform>
+                <output id="res"><resform></resform></output>
+                </resform>
+
                 <meanbutton>
                     <form class="" action="" method="post">
-                        <button id="B1" type="button" name="button">WEIGHTED</button>
+                        <button id="meanb" type="button" name="button1">MEAN</button>
                     </form>
                 </meanbutton>
+
+                <wbutton>
+                    <form class="" action="" method="post">
+                        <button id="wb" type="button" name="button2">WEIGHTED</button>
+                    </form>
+                </wbutton>
 
             </div2>
         </div>
