--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PLEASE Work - ForMUla Tester</title>
+        <title>PLEASE WorKK - ForMUla Tester</title>
         <link rel= "stylesheet" href="/stylesheets/style.css">
         <script src="js/script.js" defer></script>
     </head>
