--- a/public/test.html
+++ b/public/test.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>PLEASE WorKK - ForMUla Tester</title>
-        <link rel= "stylesheet" href="/stylesheets/style.css">
+        <title>CourSys - Formula Testerr</title> 
+        <link rel= "stylesheet" href="/stylesheets/calculator.css">
         <script src="js/script.js" defer></script>
     </head>
     <body>
@@ -13,7 +13,7 @@
             <div2>
                 <h2>Activities</h2>
 
-                <p>Give grades to the numeric activities.</p>
+                <p>Give grades to the numeric activities:</p>
                 <br>
                 <table>
                     <tr>
@@ -37,19 +37,21 @@
                             </form>
                         </th>
                         <th>
-                            <form>
-                                <input type="text"
-                                       name="num1"
-                                       id="n1"/>
-                            </form>/
-
+                                <form>
+                                    <input type="text"
+                                           name="num1"
+                                           id="n1" />
+                                
+                                </form>/
                             <form>
                                 <input type="text"
                                        name="den1"
                                        id="d1"/>
                             </form>
                         </th>
-                        <th>     </th>
+                        <th>
+                            <output id="a1per"></output>
+                        </th>
                     </tr>
                     <tr>
                         <th>Activity 2</th>
@@ -74,7 +76,9 @@
                                        id="d2"/>
                             </form>
                         </th>
-                        <th>     </th>
+                        <th>
+                            <output id="a2per"></output>
+                        </th>
                     </tr>
                     <tr>
                         <th>Activity 3</th>
@@ -99,7 +103,9 @@
                                        id="d3"/>
                             </form>
                         </th>
-                        <th>     </th>
+                        <th>
+                            <output id="a3per"></output>
+                        </th>
                     </tr>
                     <tr>
                         <th>Activity 4</th>
@@ -124,7 +130,9 @@
                                        id="d4"/>
                             </form>
                         </th>
-                        <th>     </th>
+                        <th>
+                            <output id="a4per"></output>
+                        </th>
                     </tr>
                 </table>
 
