--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>CourSys - Formula Tester4</title> 
+        <title>CourSys - Formula Tester</title> 
         <link rel= "stylesheet" href="/stylesheets/calculator.css">
         <script src="js/script.js" defer></script>
     </head>
