Fix format issue with slash in grade

--- a/public/test.html
+++ b/public/test.html
@@ -37,16 +37,14 @@
                             </form>
                         </th>
                         <th>
-                                <form>
-                                    <input type="text"
-                                           name="num1"
-                                           id="n1" />
-                                
-                                </form>/
+                            <form>
+                                <input type="text" name="num1" id="n1" /> /
+                            </form>
+                            <br class="smallspace" />
                             <form>
                                 <input type="text"
                                        name="den1"
-                                       id="d1"/>
+                                       id="d1" />
                             </form>
                         </th>
                         <th>
@@ -65,15 +63,13 @@
                         </th>
                         <th>
                             <form>
-                                <input type="text"
-                                       name="num2"
-                                       id="n2"/>
+                                <input type="text" name="num2" id="n2" /> /
                             </form>
-                            /
+                            <br class="smallspace" />
                             <form>
                                 <input type="text"
                                        name="den2"
-                                       id="d2"/>
+                                       id="d2" />
                             </form>
                         </th>
                         <th>
@@ -92,11 +88,9 @@
                         </th>
                         <th>
                             <form>
-                                <input type="text"
-                                       name="num3"
-                                       id="n3"/>
+                                <input type="text" name="num3" id="n3" /> /
                             </form>
-                            /
+                            <br class="smallspace" />
                             <form>
                                 <input type="text"
                                        name="den3"
@@ -119,11 +113,9 @@
                         </th>
                         <th>
                             <form>
-                                <input type="text"
-                                       name="num4"
-                                       id="n4"/>
+                                <input type="text" name="num4" id="n4" /> /
                             </form>
-                            /
+                            <br class="smallspace" />
                             <form>
                                 <input type="text"
                                        name="den4"
