Fix font and format errors

--- a/public/test.html
+++ b/public/test.html
@@ -25,43 +25,45 @@
                         <th>Percent</th>
                     </tr>
                     <tr>
-                        <th>Activity 1</th>
-                        <th>A1</th>
-                        <th>
-                            <form>
-                                <weight>
+                       
+                            <th class="insidetbl">Activity 1</th>
+                            <th class="insidetbl">A1</th>
+                            <th>
+                                <form>
+                                    <weight>
+                                        <input type="text"
+                                               name="w1"
+                                               id="w1" />
+                                    </weight>
+                                </form>
+                            </th>
+                            <th class="insidetbl">
+                                <form>
+                                    <input type="text" name="num1" id="n1" /> /
+                                </form>
+                                <br class="smallspace" />
+                                <form>
                                     <input type="text"
-                                           name="w1"
-                                           id="w1"/>
-                                </weight>
-                            </form>
-                        </th>
-                        <th>
-                            <form>
-                                <input type="text" name="num1" id="n1" /> /
-                            </form>
-                            <br class="smallspace" />
-                            <form>
-                                <input type="text"
-                                       name="den1"
-                                       id="d1" />
-                            </form>
-                        </th>
-                        <th>
-                            <output id="a1per"></output>
-                        </th>
+                                           name="den1"
+                                           id="d1" />
+                                </form>
+                            </th>
+                            <th>
+                                <output id="a1per"></output>
+                            </th>
+
                     </tr>
                     <tr>
-                        <th>Activity 2</th>
-                        <th>A2</th>
-                        <th>
+                        <th class="insidetbl">Activity 2</th>
+                        <th class="insidetbl">A2</th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text"
                                        name="w2"
-                                       id="w2"/>
+                                       id="w2" />
                             </form>
                         </th>
-                        <th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text" name="num2" id="n2" /> /
                             </form>
@@ -77,16 +79,16 @@
                         </th>
                     </tr>
                     <tr>
-                        <th>Activity 3</th>
-                        <th>A3</th>
-                        <th>
+                        <th class="insidetbl">Activity 3</th>
+                        <th class="insidetbl">A3</th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text"
                                        name="w3"
-                                       id="w3"/>
+                                       id="w3" />
                             </form>
                         </th>
-                        <th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text" name="num3" id="n3" /> /
                             </form>
@@ -94,7 +96,7 @@
                             <form>
                                 <input type="text"
                                        name="den3"
-                                       id="d3"/>
+                                       id="d3" />
                             </form>
                         </th>
                         <th>
@@ -102,16 +104,16 @@
                         </th>
                     </tr>
                     <tr>
-                        <th>Activity 4</th>
-                        <th>A4</th>
-                        <th>
+                        <th class="insidetbl">Activity 4</th>
+                        <th class="insidetbl">A4</th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text"
                                        name="w4"
-                                       id="w4"/>
+                                       id="w4" />
                             </form>
                         </th>
-                        <th>
+                        <th class="insidetbl">
                             <form>
                                 <input type="text" name="num4" id="n4" /> /
                             </form>
@@ -119,13 +121,14 @@
                             <form>
                                 <input type="text"
                                        name="den4"
-                                       id="d4"/>
+                                       id="d4" />
                             </form>
                         </th>
                         <th>
                             <output id="a4per"></output>
                         </th>
                     </tr>
+                    
                 </table>
 
                 <h2>Result</h2>
