add clear button

--- a/public/test.html
+++ b/public/test.html
@@ -25,32 +25,32 @@
                         <th>Percent</th>
                     </tr>
                     <tr>
-                       
-                            <th class="insidetbl">Activity 1</th>
-                            <th class="insidetbl">A1</th>
-                            <th>
-                                <form>
-                                    <weight>
-                                        <input type="text"
-                                               name="w1"
-                                               id="w1" />
-                                    </weight>
-                                </form>
-                            </th>
-                            <th class="insidetbl">
-                                <form>
-                                    <input type="text" name="num1" id="n1" /> /
-                                </form>
-                                <br class="smallspace" />
-                                <form>
+
+                        <th class="insidetbl">Activity 1</th>
+                        <th class="insidetbl">A1</th>
+                        <th>
+                            <form>
+                                <weight>
                                     <input type="text"
-                                           name="den1"
-                                           id="d1" />
-                                </form>
-                            </th>
-                            <th>
-                                <output id="a1per"></output>
-                            </th>
+                                           name="w1"
+                                           id="w1" />
+                                </weight>
+                            </form>
+                        </th>
+                        <th class="insidetbl">
+                            <form>
+                                <input type="text" name="num1" id="n1" /> /
+                            </form>
+                            <br class="smallspace" />
+                            <form>
+                                <input type="text"
+                                       name="den1"
+                                       id="d1" />
+                            </form>
+                        </th>
+                        <th>
+                            <output id="a1per"></output>
+                        </th>
 
                     </tr>
                     <tr>
@@ -128,12 +128,12 @@
                             <output id="a4per"></output>
                         </th>
                     </tr>
-                    
+
                 </table>
 
                 <h2>Result</h2>
                 <resform>
-                <output id="res"><resform></resform></output>
+                    <output id="res"><resform></resform></output>
                 </resform>
 
                 <meanbutton>
@@ -147,6 +147,12 @@
                         <button id="wb" type="button" name="button2">WEIGHTED</button>
                     </form>
                 </wbutton>
+
+               <clrbutton>
+                <form class="" action="" method="post">
+                    <button id="clrb" type="button" name="button3">CLEAR</button>
+                </form>
+                </clrbutton>
 
             </div2>
         </div>
