--- a/public/test.html
+++ b/public/test.html
@@ -153,7 +153,11 @@
                     <button id="clrb" type="button" name="button3">CLEAR</button>
                 </form>
                 </clrbutton>
-
+               <chngbutton>
+                   <form class="" action="" method="post">
+                       <button id="chngb" type="button" name="button4">CHANGE TO PERCENTAGE (CLEARS INPUT)</button>
+                   </form>
+               </chngbutton>
             </div2>
         </div>
     </body>
