Made Form Function Work Better (without clearing)

--- a/public/test.html
+++ b/public/test.html
@@ -155,7 +155,7 @@
                 </clrbutton>
                <chngbutton>
                    <form class="" action="" method="post">
-                       <button id="chngb" type="button" name="button4">CHANGE TO PERCENTAGE (CLEARS INPUT)</button>
+                       <button id="chngb" type="button" name="button4">CHANGE TO PERCENTAGE</button>
                    </form>
                </chngbutton>
             </div2>
